--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         #website-image {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Maintain the image aspect ratio and cover the entire container */
+            object-fit: contain; /* Zoom out the image */
         }
     </style>
 </head>
 <body>
 
 <div id="image-container">
-    <img id="website-image" src="image.png" alt="Your Image Description">
+    <img id="website-image" src="path/to/your/image.jpg" alt="Your Image Description">
 </div>
 
 </body>
