--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         }
 
         #website-image {
-            width: 100%;
-            height: 100%;
+            width: 1500px; /* Set the desired width */
+            height: 800px; /* Set the desired height */
             object-fit: contain; /* Zoom out the image */
         }
     </style>
