--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <div id="image-container">
-    <img id="website-image" src="path/to/your/image.jpg" alt="Your Image Description">
+    <img id="website-image" src="image.png" alt=" ">
 </div>
 
 </body>
